# SOEP

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  storage.txt
.github/workflows/: ci.yml
include/temp/: temp.h
libs/pqxx/lib/: libpgcommon.lib  libpgport.lib  pqxx.lib
resources/: norad_ids.json  satellite_data.json
sgp4/: README.md  run.py  sgp4_module.pyx
src/: collision_probability_calculator.cpp  collision_probability_calculator.h  db_RAII.h  main.cpp  pch.h  satellite_processor.cpp  satellite_processor.h
src/api/: api_call.cpp  api_call.h
src/core/: assert.h  base.h  profiler.h  threadpool.cpp  threadpool.h  timer.h
src/database/: README.md  database_connection.cpp  database_connection.h  docker-compose.yml  prepared_stmt.cpp  query_exec.cpp  scoped_connection.h  transactions.cpp
src/database/initdb/: codegen.py  init_satellites.sql
src/database/pool/: connection_pool.cpp  connection_pool.h
src/db/: database.h  db_create.cpp  db_create.h
src/db/postgreSQL/: db_module.cpp  db_module.h
src/network/: network.cpp  network.h
src/temp/: temp.cpp
tests/: test_main.cpp
